--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://glalex34.github.io/styles.css">
 	
 </head>
 
@@ -17,7 +17,7 @@
 	<div id="mouseMove">
 
 		<canvas id="myCanvas"></canvas>
-		<canvas id="hiddenCanv"></canvas>
+		<!--<canvas id="hiddenCanv"></canvas>-->
 	
 	</div>
 	
@@ -60,10 +60,10 @@
 		
 		<table id="pixel_canvas"></table>
 		
-		<script src="designs.js"></script>
+		<script src="https://glalex34.github.io/design.js"></script>
 	</div>
 	
-	<script src="animation.js"></script>
+	<script src="https://glalex34.github.io/animation.js"></script>
 	
 </body>
 
