--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		
 		<table id="pixel_canvas"></table>
 		
-		<script src="https://glalex34.github.io/design.js"></script>
+		<script src="https://glalex34.github.io/designs.js"></script>
 	</div>
 	
 	<script src="https://glalex34.github.io/animation.js"></script>
