--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 			
 		</div>
 		
+		<span id="creds">Music: Honor For All by Jon Licht</span>
+		
 		<div id="toolPoz">
 		
 			<span id="tutorial">Scroll using arrows or mouse wheel</span>
