--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 			
 		</div>
 		
-		<span id="creds">Music: Honor For All by Jon Licht</span>
+		<span id="creds">Music: NEFFEX - Destiny</span>
+		<span id="creds">Channel: 
+			<a href="https://www.youtube.com/channel/UCBefBxNTPoNCQBU_Lta6Nvg" style="color: white; text-decoration: underline;"> Youtube Channel </a>
+		</span>
 		
 		<div id="toolPoz">
 		
