--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		</div>
 		
 		<span id="creds">Music: NEFFEX - Destiny</span>
-		<span id="creds">Channel: 
+		<p id="creds">Channel: 
 			<a href="https://www.youtube.com/channel/UCBefBxNTPoNCQBU_Lta6Nvg" style="color: white; text-decoration: underline;"> Youtube Channel </a>
-		</span>
+		</p>
 		
 		<div id="toolPoz">
 		
