--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pixel Art Maker!</title>
 	<meta charset="UTF-8">
 	<script src="lib/JQuary-3.2.1/jquery.js"></script>
-	<script src="lib/html2canvas.js"></script>
+	<script src="lib/html2canvas/html2canvas.js"></script>
 	<script src="js/designs.js"></script>
     <link rel="stylesheet" href="style/fonts/monoton.css">
     <link rel="stylesheet" href="style/styles.css">
@@ -51,7 +51,7 @@
 			<a id="addingS">Add size.</a>
 			<a id="substractingS">Subtract size.</a>
 			<a id="gridCheck">With/Without border: <span id="borderCh">ON</span></a>
-			<a id="musicCh">Music: <span id="musicChText"> ON </span></a>
+			<a id="musicCh">Music: <span id="musicChText"> OFF </span></a>
 			
 		</div>
 		
