--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-	<audio id="myAudio" controls loop autoplay volume="0.2">
+	<audio id="myAudio" controls loop volume="0.2">
 	
 		<source src="music/music.mp3" type="audio/mpeg">
 	
